want to remove these three files, but must commit changes first

--- a/article/inputs/refs.bib
+++ b/article/inputs/refs.bib
@@ -165,7 +165,7 @@
     MRREVIEWER = {B. Chang}
   }
   @article {Tuma:1986,
-    AUTHOR = {T{\ocirc{u}}ma, Ji{\v{r}}{\'{\i}}},
+    AUTHOR = {\Tuma, \Jiri},
     TITLE = {Some finite congruence lattices. {I}},
     JOURNAL = {Czechoslovak Math. J.},
     FJOURNAL = {Czechoslovak Mathematical Journal},
