added tikz subdirectory for collecting tikz code for Hasse diagrams

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -710,27 +710,8 @@ which is the set of all unary maps on $X$ which respect all relations in $L$.
 
 \begin{center}
   \begin{tikzpicture}[scale=.4]
-    % lat5
-    \node (c) at (.5,.75)   {};
-    \node (d) at (-1.5,4.5)   {};
-    \node (e) at (1,2)   {};
-    \node (f) at (-.75,6)   {};
-    \node (bottom) at (0,0)  [fill, circle, inner sep=.8pt] {};
-    \node (top) at (0,8)  [fill, circle, inner sep=.8pt] {};
-    \node (alpha) at (-1.8,3)  [fill, circle, inner sep=.8pt] {};
-    \node (beta) at (1.5,4)  [fill, circle, inner sep=.8pt] {};
-    \node (theta) at (-.5,3)  [fill, circle, inner sep=.8pt] {};
+    \input{inputs/tikz/filter-ideal.tex}
     \draw (-.3,3.5) node {$\theta$};
-    \draw[semithick] 
-    (bottom) to [out=15, in=-15] (top) 
-    (top) to [out=195, in=165] (bottom);
-    \draw[dotted] (c) to (d) (e) to (f);
-    \draw[dotted] (bottom) to (alpha)  (beta) to (top);
-    \draw[semithick] 
-    (alpha) to [out=30, in=-80] (top)
-    (top) to [out=205, in=105] (alpha)
-    (bottom) to [out=30, in=-80] (beta)
-    (beta) to [out=205, in=110] (bottom);
     \draw (0,-1.5) node {$L_0 \leq  L$};
     \draw (-1.8,2.5) node {$\alpha$};
     \draw (1.5,4.5) node {$\beta$};
