--- a/article/inputs/tikz/filter-ideal.tex
+++ b/article/inputs/tikz/filter-ideal.tex
@@ -21,3 +21,6 @@
 \draw[dotted] (bottom) to (alpha)  (beta) to (top);
 
 
+%% If you get "undefined control sequence \dotsize" when you compile, put
+%% the following command in the preamble of your document:
+%% \newcommand{\dotsize}{1pt}
