--- a/article/inputs/tikz/ordinal-sum.tex
+++ b/article/inputs/tikz/ordinal-sum.tex
@@ -2,8 +2,8 @@
 %% author: williamdemeo@gmail.com
 %% To insert this in a document, put it inside a tikzpicture block. 
 %% 
-%% notes: two potatoes, one atop the other
 
+%% Two potatoes, one atop the other
 \node (botL1) at (0,-4) [draw, circle,inner sep=\dotsize] {};
 \node (m80) at (0,0) [draw, circle,inner sep=\dotsize] {};
 \node (topL2) at (0,4) [draw,circle,inner sep=\dotsize] {};
