--- a/article/inputs/tikz/parallel-sum.tex
+++ b/article/inputs/tikz/parallel-sum.tex
@@ -3,20 +3,23 @@
 %% To insert this in a document, put it inside a tikzpicture block. 
 
 %% notes: Two potatoes side-by-side with new common top and bottom
-\node (bot) at (0,-3.7) [draw, circle,inner sep=1pt] {};
-\node (top) at (0,3.7) [draw,circle,inner sep=1pt] {};
-\node (botL1) at (-2,-2) [draw,circle,inner sep=1pt] {};
-\node (topL1) at (-2,2) [draw,circle,inner sep=1pt] {};
-\node (botL2) at (2,-2) [draw,circle,inner sep=1pt] {};
-\node (topL2) at (2,2) [draw,circle,inner sep=1pt] {};
+\node (bot) at (0,-3.7) [draw,circle,inner sep=\dotsize] {};
+\node (top) at (0,3.7) [draw,circle,inner sep=\dotsize] {};
+\node (botL1) at (-2,-2) [draw,circle,inner sep=\dotsize] {};
+\node (topL1) at (-2,2) [draw,circle,inner sep=\dotsize] {};
+\node (botL2) at (2,-2) [draw,circle,inner sep=\dotsize] {};
+\node (topL2) at (2,2) [draw,circle,inner sep=\dotsize] {};
 
+%% lines connecting potatoes to new top and bottom
 \draw[semithick] 
 (bot) to (botL1) (topL1) to (top)
 (bot) to (botL2) (topL2) to (top);
 
 \draw [semithick]  
+%% L1: left potato
 (botL1) to [out=50,in=-50] (topL1)
 (botL1) to [out=130,in=-130] (topL1)
+%% L2: right potato
 (botL2) to [out=50,in=-50] (topL2)
 (botL2) to [out=130,in=-130] (topL2);
 
