--- a/article/inputs/tikz/L10.tex
+++ b/article/inputs/tikz/L10.tex
@@ -1,12 +1,24 @@
 %%  The elusive winged-2x3 %%
-      \node (01) at (0,1)  [draw, circle, inner sep=\dotsize] {};
-      \foreach \j in {0,2} 
-      { \node (1\j) at (1,\j)  [draw, circle, inner sep=\dotsize] {};}
+\node[lat] (bottom) at (0,0) {};
+\node[lat] (top) at (1,3) {};
+\node[lat] (n11) at (-1,1) {};
+\node[lat] (11) at (1,1)  {};
+\node[lat] (02) at (0,2)  {};
+\node[lat] (22) at (2,2)  {};
+\node[lat] (wing) at (-2,1) {};
+\draw[semithick] 
+(bottom) to (11) to (22) to (top) to (02) to (11)
+(top) to (wing) to (bottom) to (n11) to (02);
 
-      \foreach \j in {1,3} 
-      { \node (2\j) at (2,\j)  [draw, circle, inner sep=\dotsize] {};}
-      { \node (32) at (3,2)  [draw, circle, inner sep=\dotsize] {};}
-      \draw[semithick] (10) to (01) to (12) to (23) to (32) to (21) to (10) (21) to (12);
-      { \node (m11) at (-1,1)  [draw, circle, inner sep=\dotsize] {};}
-      \draw[semithick] (10) to (m11) to (23);
+%% the old way (too complicated):
+%% \node[lat] (01) at (0,1)  [draw, circle, inner sep=\dotsize] {};
+%% \foreach \j in {0,2} 
+%%          { \node[lat] (1\j) at (1,\j) {};}
+%%          \foreach \j in {1,3} 
+%%                   { \node[lat] (2\j) at (2,\j) {};}
+%%                   { \node[lat] (32) at (3,2) {};}
+
+%% \draw[semithick] (10) to (01) to (12) to (23) to (32) to (21) to (10) (21) to (12);
+%% { \node[lat] (m11) at (-1,1) {};}
+%% \draw[semithick] (10) to (m11) to (23);
 
