--- a/article/inputs/tikz/L13.tex
+++ b/article/inputs/tikz/L13.tex
@@ -1,20 +1,15 @@
 %\newcommand{\dotsize}{1};
-\node (0) at (0,0) [draw, circle,inner sep=\dotsize] {};
-\node (1) at (-0,1) [draw, circle, inner sep=\dotsize] {};
-\node (2) at (1,2) [draw, circle, inner sep=\dotsize] {};
-\node (3) at (-1,2) [draw, circle, inner sep=\dotsize] {};
-\node (4) at (-0,2) [draw, circle, inner sep=\dotsize] {};
-\node (5) at (-0,3) [draw, circle, inner sep=\dotsize] {};
-\node (6) at (-0,4) [draw, circle, inner sep=\dotsize] {};
+\node[lat] (0) at (0,0) {};
+\node[lat] (1) at (-0,1) {};
+\node[lat] (2) at (1,2) {};
+\node[lat] (3) at (-1,2) {};
+\node[lat] (4) at (-0,2) {};
+\node[lat] (5) at (-0,3) {};
+\node[lat] (6) at (-0,4) {};
 %\draw[font=\scriptsize] (0,-.5) node {[A4, (C2 x C2 x C2 x C2) : A5]};
 %\draw[font=\scriptsize] (0,-1) node {SmallGroup(960,11358) Index 80};
 
 \draw[semithick]
-(0) to (1)
-(0) to (2)
-(0) to (3)
-(1) to (4)
-(2) to (6)
-(3) to (6)
-(4) to (5)
-(5) to (6);
+(0) to (1) to (4) to (5) to (6)
+(0) to (2) to (6) to (3) to (0);
+
