--- a/article/inputs/tikz/L3.tex
+++ b/article/inputs/tikz/L3.tex
@@ -1,11 +1,11 @@
 % L11 aka L3 
-        \node (bottom) at (0,0)  [draw, circle, inner sep=\dotsize] {};
-        \node (top) at (2,6)  [draw, circle, inner sep=\dotsize] {};
-        \node (n22) at (-2,2)  [draw, circle, inner sep=\dotsize] {};
-        \node (22) at (2,2)  [draw, circle, inner sep=\dotsize] {};
-        \node (13) at (1,3)  [draw, circle, inner sep=\dotsize] {};
-        \node (04) at (0,4)  [draw, circle, inner sep=\dotsize] {};
-        \node (44) at (4,4)  [draw, circle, inner sep=\dotsize] {};
+\node[lat] (bottom) at (0,0) {};
+\node[lat] (top) at (1,3) {};
+\node[lat] (n11) at (-1,1) {};
+\node[lat] (11) at (1,1)  {};
+\node[lat] (mp) at (.5,1.5)  {};
+\node[lat] (02) at (0,2)  {};
+\node[lat] (22) at (2,2)  {};
 
-        \draw[semithick] (bottom) to (22) to (44) to (top) to (04) to (13) to (22)
-        (bottom) to (n22) to (04);
+\draw[semithick] (bottom) to (11) to (22) to (top) to (02) to (mp) to (11)
+(bottom) to (n11) to (02);
