--- a/article/inputs/tikz/filter-ideal.tex
+++ b/article/inputs/tikz/filter-ideal.tex
@@ -3,10 +3,10 @@
 %% To insert this in a document, put it inside a tikzpicture block. 
 
 %% Disjoint union of a principal filter and a principle ideal.
-\node (bottom) at (0,0)  [draw, circle, inner sep=\dotsize] {};
-\node (top) at (0,8)  [draw, circle, inner sep=\dotsize] {};
-\node (alpha) at (-2,3)  [draw, circle, inner sep=\dotsize] {};
-\node (beta) at (2,5)  [draw, circle, inner sep=\dotsize] {};
+\node[lat] (bottom) at (0,0) {};
+\node[lat] (top) at (0,8) {};
+\node[lat] (alpha) at (-2,3) {};
+\node[lat] (beta) at (2,5) {};
 \draw[semithick] 
 % filter:
 (alpha) to [out=30, in=-80] (top) to [out=205, in=105] (alpha)
@@ -20,7 +20,3 @@
 (1.25,3) to (-1,6);
 \draw[dotted] (bottom) to (alpha)  (beta) to (top);
 
-
-%% If you get "undefined control sequence \dotsize" when you compile, put
-%% the following command in the preamble of your document:
-%% \newcommand{\dotsize}{1pt}
