--- a/article/inputs/tikz/ordinal-sum.tex
+++ b/article/inputs/tikz/ordinal-sum.tex
@@ -4,17 +4,13 @@
 %% 
 
 %% Two potatoes, one atop the other
-\node (botL1) at (0,-4) [draw, circle,inner sep=\dotsize] {};
-\node (m80) at (0,0) [draw, circle,inner sep=\dotsize] {};
-\node (topL2) at (0,4) [draw,circle,inner sep=\dotsize] {};
+\node[lat] (botL1) at (0,-4) {};
+\node[lat] (m80) at (0,0) {};
+\node[lat] (topL2) at (0,4) {};
 
 \draw [semithick]  
 (botL1) to [out=50,in=-50] (m80)
 (botL1) to [out=130,in=-130] (m80)
 (m80) to [out=50,in=-50] (topL2)
 (m80) to [out=130,in=-130] (topL2);
-
-%% If you get undefined control sequence \dotsize when you compile, put
-%% the following command in the preamble of your document:
-%% \newcommand{\dotsize}{1pt}
 
