--- a/article/inputs/tikz/wheatstone_bridge.tex
+++ b/article/inputs/tikz/wheatstone_bridge.tex
@@ -1,16 +1,18 @@
-      \node (x) at (-1,1)  [draw, circle, inner sep=\dotsize] {};
-      \node (y) at (1,1)  [draw, circle, inner sep=\dotsize] {};
-      \node (a) at (0,2)  [draw, circle, inner sep=\dotsize] {};
-      \node (b) at (0,0)  [draw, circle, inner sep=\dotsize] {};
-      \draw (x) node [left] {$x$};
-      \draw (a) node [above] {$a$};
-      \draw (b) node [below] {$b$};
-      \draw (y) node [right] {$y$};
-      \draw[semithick] (b)-- (a) node[pos=.5,right] {$\beta$};
-      \draw[semithick] (x)-- (a) node[pos=.5,left] {$\alpha_1$};
-      \draw[semithick] (x)-- (b) node[pos=.5,left] {$\alpha_2$};
-      \draw[semithick] (b)-- (y) node[pos=.5,right] {$\alpha_1$};
-      \draw[semithick] (a)-- (y) node[pos=.5,right] {$\alpha_2$};
+%% wheatstone_bridge.tex
+%% "Wheatstone Bridge"
+\node[lat] (x) at (-1,1) {};
+\node[lat] (y) at (1,1) {};
+\node[lat] (a) at (0,2) {};
+\node[lat] (b) at (0,0) {};
+\draw (x) node [left] {$x$};
+\draw (a) node [above] {$a$};
+\draw (b) node [below] {$b$};
+\draw (y) node [right] {$y$};
+\draw[semithick] (b)-- (a) node[pos=.5,right] {$\beta$};
+\draw[semithick] (x)-- (a) node[pos=.5,left] {$\alpha_1$};
+\draw[semithick] (x)-- (b) node[pos=.5,left] {$\alpha_2$};
+\draw[semithick] (b)-- (y) node[pos=.5,right] {$\alpha_1$};
+\draw[semithick] (a)-- (y) node[pos=.5,right] {$\alpha_2$};
 %%   \caption{The Wheatstone Bridge which defines the relation 
 %%     $\tau(\alpha_1, \alpha_2, \beta)$ as follows: 
 %%     $(x,y) \in \tau(\alpha_1, \alpha_2, \beta)$ if and only if there 
