minor adjustment to title and abstract

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -333,8 +333,8 @@
 %%                        FRONT MATTER                              %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title[Representing a Finite Lattice]{Representing a Finite Lattice as the\\Congruence
-  Lattice of a Finite Algebra} 
+\title[Representing Finite Lattices]{Representing Finite Lattices as \\Congruence
+  Lattices of Finite Algebras} 
 
 
 %///////////////////////////////////////////////////////////////////////////////////////
@@ -388,11 +388,11 @@
 
 %/////////////////////////////////////////////////////////
 \begin{abstract}
-  This article provides an overview of various known methods for representing a
-  finite lattice as the congruence lattice of a finite algebra or proving that
-  such a representation exists. Using these and a recently discovered method, we
-  show, for all but one lattice, that every lattice with at most seven elements
-  is isomorphic to the congruence lattice of a finite algebra.  
+  This article describes various methods for representing a
+  finite lattice as the congruence lattice of a finite algebra or for proving
+  that such a representation exists. Using these methods, we show that with one
+  possible exception every lattice with at most seven elements is isomorphic to
+  the congruence lattice of a finite algebra.
 \end{abstract}
 
 
