--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -407,10 +407,16 @@
 %%%% \input{inputs/intro.tex}  (include all major inputs in one file)
 %% -- Begin intro.tex file insertion -------------------------------
 
-%%%%%%%%%%%%%%%%%  METHODSOVERVIEW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%  NOTATION %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Notation}
+
 Throughout this paper, we use $\sL$ to denote the class of finite lattices that
 are isomorphic to congruence lattices of finite algebras. 
 We call the lattices that belong to $\sL$ \emph{representable} lattices. 
+
+%%%%%%%%%%%%%%%%%  METHODSOVERVIEW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Closure properties of the class of representable lattices}
 \label{sec:clos-prop-class}
