--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -350,7 +350,7 @@
 \author[P. Jipsen]{Peter Jipsen}
 \email{jipsen@chapman.edu}
 \urladdr{http://www1.chapman.edu/~jipsen/}
-\address{Department of Mathematics\\Chapman University\\Orange 92866\\USA}
+\address{School of Comutational Sciences\\Chapman University\\Orange 92866\\USA}
 
 
 %///////////////////////////////////////////////////////////////////////////////////////
