--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -1474,30 +1474,21 @@ congruence lattice. The algebra for 33 $(M_5)$ is also known to be minimal in
 size. Currently only one of the lattices (10) is not known to be the congruence
 lattice of a finite algebra. 
 
-Thirteen of the 35 lattices below are subdirectly reducible (specifically: 6, 7,
-12, 13, 26, 27, 28, 29, 30, 31, 32, 34, 35). 
+%Thirteen of the 35 lattices below are subdirectly reducible (specifically: 6, 7,12, 13, 26, 27, 28, 29, 30, 31, 32, 34, 35). 
 \scriptsize
 
 \begin{tabular}{l}\begin{tikzpicture}
-[scale=2, e/.style={rectangle,draw,rounded corners=3pt}]
-\node(4) at (0,1)[e]{1};
-\node(3) at (0.33,0.33)[e]{\begin{tikzpicture}
-[scale=.3, e/.style={circle,draw,inner sep=0pt,minimum size=3pt}]
-\node(a) at (0,1)[e]{};\node(b) at (1,1)[e]{};\node(c) at (0,0)[e]{};\node(d) at (1,0)[e]{};
-\draw(a)--(b);\draw(c)--(d);\end{tikzpicture}};
-\node(2) at (-0.5,0.0)[e]{\begin{tikzpicture}
-[scale=.3, e/.style={circle,draw,inner sep=0pt,minimum size=3pt}]
-\node(a) at (0,1)[e]{};\node(b) at (1,1)[e]{};\node(c) at (0,0)[e]{};\node(d) at (1,0)[e]{};
-\draw(a)--(c);\draw(b)--(d);\end{tikzpicture}};
-\node(1) at (0.33,-0.33)[e]{\begin{tikzpicture}
-[scale=.3, e/.style={circle,draw,inner sep=0pt,minimum size=3pt}]
-\node(a) at (0,1)[e]{};\node(b) at (1,1)[e]{};\node(c) at (0,0)[e]{};\node(d) at (1,0)[e]{};
-\draw(c)--(d);\end{tikzpicture}};
-\node(0) at (0,-1)[e]{0};
+    [scale=1.2, e/.style={circle,draw,inner sep=0pt,minimum size=5pt}]
+\node(4) at (0,1)[e]{};
+\node(3) at (0.33,0.33){$1\ 2|3\ 4$};
+\node(2) at (-0.5,0.0){$1\ 3|2\ 4$};
+\node(1) at (0.33,-0.33){$1|2|3\ 4$};
+\node(0) at (0,-1)[e]{};
 \node at (0,-1.25){\scs 1 ($N_5$)};
-\node at (0,1.1)[above]{\begin{tabular}{l}
-(1,0,3,2)\\
-(1,0,1,0)\end{tabular}};
+\node at (0,1.1)[above]{$\setlength{\arraycolsep}{2pt}\begin{array}{c|cccc}
+    x& 0& 1& 2& 3\\\hline
+   f(x)& 1& 0& 3& 2\\
+   g(x)& 1& 0& 1& 0\end{array}$};
 \node at (0,1.5){};
 \draw(3)--(4);
 \draw(2)--(4);
@@ -1505,7 +1496,7 @@ Thirteen of the 35 lattices below are subdirectly reducible (specifically: 6, 7,
 \draw(0)--(1);
 \draw(0)--(2);
 \end{tikzpicture}\end{tabular}
-\qquad\qquad
+\qquad
 \begin{tabular}{l}\begin{tikzpicture}
 [scale=2, e/.style={rectangle,draw,rounded corners=3pt}]
 \node(4) at (-0.0,1.0)[e]{1};
@@ -1818,6 +1809,7 @@ $p_3=$ (0,1,2,0,0,2,2)\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(4);
 \end{tikzpicture}\end{tabular}
+
 \begin{tabular}{l}\begin{tikzpicture}
 [scale=2, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (-0.1,0.99)[e]{};
@@ -1845,6 +1837,7 @@ $p_3=$ (0,1,2,0,0,2,2)\end{tabular}};
 \draw(0)--(3);
 \draw(0)--(4);
 \end{tikzpicture}\end{tabular}
+
 \begin{tabular}{l}\begin{tikzpicture}
 [scale=2, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
