--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -296,10 +296,15 @@
 %%   \acrodef{np}[NP]{nondeterministic polynomial time}
 %% (this acronym would be used inside a latex document with a command like \ac{np})
 
+%% Define some acronyms
 \acrodef{flrp}[FLRP]{finite lattice representation problem}
+\acrodef{gap}[GAP]{GAP}
 
 %% To make frequently used acronyms easier to type:
 \newcommand{\flrp}{\ac{flrp}\xspace}
+\newcommand{\gap}{\acs{gap}\xspace}
+
+
 
 
 
@@ -1445,27 +1450,240 @@ conjugacy classes of subgroups of $G$.
 
 %% -- End groupactions.tex file insertion -------------------------------
 
+%% -- New section on representing some specific examples
+\subsection{Examples}
+
+\subsubsection{$L_{11}$}
+\label{sec:l11}
+In this subsection, we prove that the lattice shown in the diagram below is the congruence lattice of a finite algebra.
+
+\begin{center}
+  \begin{tikzpicture}[scale=1]
+    \input{inputs/tikz/L3.tex}
+    %    \draw (bottom) node [right]{$L_{11}$};
+  \end{tikzpicture}
+\end{center}
+
+%% \begin{tikzpicture}
+%% [scale=2, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
+%% \node(6) at (0.33,1)[e]{};
+%% \node(5) at (-0.33,0.33)[e]{};
+%% \node(4) at (1,0.33)[e]{};
+%% \node(3) at (0,0)[e]{};
+%% \node(2) at (-1,-0.33)[e]{};
+%% \node(1) at (0.33,-0.33)[e]{};
+%% \node(0) at (-0.33,-1)[e]{};
+%% \node at (0,1.5){};
+%% \draw(5)--(6)--(4)--(1)--(3)--(5)--(2)--(0)--(1);
+%% \end{tikzpicture}
+
+We start with the group representation of the pentagon as the upper
+interval $\lb H, G\rb$ 
+where $G \cong ((C_3 \times C_3) : Q_8) : C_3$ and 
+$H \cong C_6$.  Here $C_k$ denotes the cyclic group of order $k$, $Q_8$ denotes the
+quaternion group of order 8, and {\tt :} denotes the usual semidirect product.
+We let $\alpha \prec \beta$ and $\gamma$ denote the three
+subgroups inside the pentagon $\lb H, G \rb$, as shown in the diagram below.  
+
+%% \begin{center}
+%%   \begin{tikzpicture}[scale=1]
+%%     \input{inputs/tikz/PentagonForL11.tex}
+%%     \draw (mp) node [right]{$\alpha$};
+%%     \draw (02) node [left]{$\beta$};
+%%     \draw (22) node [right]{$\gamma$};
+%%     \draw (11) node [below]{$H$};
+%%     \draw (top) node [above]{$G$};
+%%   \end{tikzpicture}
+%% \end{center}
+The entire subgroup lattice
+$\Sub[G]$ is the congruence lattice of an algebra. Therefore, if there is a minimal
+subgroup $K$ ($1 \prec K \leq G$) that is below $\beta$, but not below 
+$\alpha$ or $\gamma$, then lattice $L_{11}$ is the 
+union of the ideal $\lb 1, K\rb$ and the filter $\lb H, G\rb$.
+This portion of $\Sub[G]$ is shown here:
+
+\begin{center}
+  \begin{tikzpicture}[scale=1]
+    \input{inputs/tikz/L3.tex}
+    %    \draw (bottom) node [right]{$L_{11}$};
+    \draw (mp) node [right]{$\alpha$};
+    \draw (02) node [left]{$\beta$};
+    \draw (22) node [right]{$\gamma$};
+    \draw (11) node [right]{$H$};
+    \draw (n11) node [left]{$K$};
+    \draw (top) node [above]{$G$};
+    \draw (bottom) node [right]{$1_G$};
+  \end{tikzpicture}
+\end{center}
+
+Luckily, there is
+such a subgroup $K$. We can check this fact using \gap, as we now describe.
+A search of the \gap Library of Small Groups finds that the 153rd
+isomorphism class of groups of order 216---that is, the group 
+returned by the function call {\tt SmallGroup( 216, 153 )}---has 
+structure description $((C_3 \times C_3) : Q_8) : C_3$.
+Upon inspection of the conjugacy classes of subgroups of this group, we 
+find that the representative of the 8th class is a suitable candidate for 
+$H$, so we define 
+
+{\small 
+\begin{verbatim}
+    G := SmallGroup( 216, 153 );;    
+    ccsg := ConjugacyClassesSubgroups( G );;
+    H := Representative( ccsg[8] );
+    intHG := IntermediateSubgroups( G, H );
+\end{verbatim}
+}
+
+\noindent 
+The last of these commands results in the following output:
+
+{\small 
+\begin{verbatim}
+    rec( 
+         subgroups := [ Group([ f1, f4, f5*f6 ]), 
+                        Group([ f1, f2, f3*f4, f4 ]), 
+                        Group([ f1, f4, f5, f6 ]) ], 
+
+         inclusions := [ [ 0, 1 ], [ 0, 2 ], [ 1, 3 ], 
+                         [ 2, 4 ], [ 3, 4 ] ] 
+       )
+\end{verbatim}
+}
+
+\noindent This is a record where the {\tt subgroups} field is a list of
+the subgroups $K$ that lie strictly between $H$ and $G$, that is, $H < K < G$,
+and the {\tt inclusions} field indicates the covering
+relations among the subgroups.
+\gap uses indices $0, 1, \dots, 4$ to label the subgroups 
+in $\lb H, G\rb$, and %% the correspondence is given in the following table:
+
+%% \begin{center}
+%% \begin{tabular}{r|l}
+%% %0 & 1 & 2 & 3 & 4\\
+%% 0 & H \\
+%% \hline
+%% 1 & Group([ f1, f4, f5*f6 ])\\
+%% \hline
+%% 2 & Group([ f1, f2, f3*f4, f4 ])\\ 
+%% \hline
+%% 3 & Group([ f1, f4, f5, f6 ]) \\ 
+%% \hline
+%% 4 & G
+%% \end{tabular}
+%% \end{center}
+
+%% \noindent 
+%% T
+in the {\tt inclusions} field the entry {\tt [ 1, 3 ]}, for example, indicates that 
+{\tt Group([ f1, f4, f5*f6 ])} is a maximal subgroup of 
+{\tt Group([ f1, f4, f5, f6 ])}.
+Therefore, the \gap output above shows that the interval 
+$\lb H, G \rb$ is a pentagon.
+
+Next, we make the following definitions 
+
+{\small 
+\begin{verbatim}
+A:=intHG.subgroups[1];  B:=intHG.subgroups[3];  C:=intHG.subgroups[2];
+\end{verbatim}
+}
+
+\todo{complete this section}
+
+%% # A < B are the comparable generators of the pentagon
+%% # C is the incomparable generator
+
+%% ccsgB:=ConjugacyClassesSubgroups(B);;
+%% # By looking at the subgroup lattice in XGAP, we notice that 
+%% # there is a conjugacy class of subgroups of B containing six
+%% # subgroups each of index 72 in G (order 3), and the subgroups
+%% # in this class are not subgroups of A or C.
+%% # We need to identify this conjugacy class of subgroups.
+%% # To do so, we first check the size of the conjugacy classes 
+%% # of subgroups of B.
+%% List(ccsgB, x->Size((x)));
+%% # returns [ 1, 9, 1, 3, 3, 6, 3, 9, 9, 1, 1, 2, 1, 3, 1, 1 ]
+%% # Thus there is only one conjugacy class of size 6,
+%% K:=Representative(ccsgB[6]);
+%% # and the subgroups of this class have order 3:
+%% Order(K); # returns 3
+%% # Note that K is a minimal subgroup since |K|=3.  
+
+%% # Finally, check that K is a subgroup of B, and not a subgroup of A or C:
+%% IsSubgroup(A,K);  # returns false
+%% IsSubgroup(B,K);  # returns true
+%% IsSubgroup(C,K);  # returns false
+%% # This shows lattice PJ11 is representable on a set of size 216.
+
+%% # In this example, where [H,G] is the pentagon, the index is [G:H]=36.  
+%% # There might be a nontrivial subgroup M < H such that in the 
+%% # interval [M, G] there is a filter+ideal that is isomorphic to PJ11.
+%% # This would give us PJ11 on a smaller set than 216.
+
+%% # Looking at the subgroup lattice of G in XGAP, we see that, 
+%% # H has only two nontrivial proper subgroups.  These are
+%% # Representative(ccsg[2]) and Representative(ccsg[4]):
+%% M1:=Representative(ccsgB[2]);
+%% M2:=Representative(ccsgB[4]);
+%% IsSubgroup(H,Representative(ccsgB[2]));  # returns true
+%% IsSubgroup(H,Representative(ccsgB[4]));  # returns true
+%% # We need to find a subgroup that covers one of these two subgroups
+%% # and is not below A or C.
+%% intM1B:=IntermediateSubgroups(B,M1);
+%% # returns 
+%% #  rec( subgroups := [ Group([ f4, f5 ]), Group([ f4, f6 ]), Group([ f1^2, f4 ]), 
+%% #        Group([ f4, f5*f6 ]), Group([ f4, f5^2*f6 ]), Group([ f4, f5, f6 ]), 
+%% #        Group([ f1^2, f4, f5*f6 ]) ], 
+%% #    inclusions := [ [ 0, 1 ], [ 0, 2 ], [ 0, 3 ], [ 0, 4 ], [ 0, 5 ], [ 1, 6 ], [ 2, 6 ], 
+%% #        [ 3, 7 ], [ 4, 6 ], [ 4, 7 ], [ 5, 6 ], [ 6, 8 ], [ 7, 8 ] ] )
+%% #
+%% # M1 is maximal in the intermediate subgroups 1, 2, 3, 4, and 5.
+%% # Check whether these are subgroups of A or C.
+%% IsSubgroup(A,intM1B.subgroups[1]);   # returns false
+%% IsSubgroup(B,intM1B.subgroups[1]);   # returns true (of course)
+%% IsSubgroup(C,intM1B.subgroups[1]);   # returns false
+%% # So PJ11 is the union of [M1, intM1B.subgroups[1]] and [H, G]
+%% Index(G,M1);  # returns 108
+%% # so we have a representation of PJ11 on 108 elements.
+
+%% # Next consider M2.
+%% Index(G,M2);  # returns 72
+%% intM2B:=IntermediateSubgroups(B,M2);
+%% # returns 
+%% #  rec( subgroups := [ Group([ f1, f4 ]), Group([ f1, f4*f5*f6 ]), Group([ f1, f4*f5^2*f6^2 ]), 
+%% #        Group([ f1, f5*f6 ]), Group([ f1, f4, f5*f6 ]), Group([ f1, f4*f5, f5^2*f6^2 ]), 
+%% #        Group([ f1, f4*f6, f5*f6 ]), Group([ f1, f5, f6 ]) ], 
+%% #    inclusions := [ [ 0, 1 ], [ 0, 2 ], [ 0, 3 ], [ 0, 4 ], [ 1, 5 ], [ 2, 5 ], [ 3, 5 ], 
+%% #        [ 4, 5 ], [ 4, 6 ], [ 4, 7 ], [ 4, 8 ], [ 5, 9 ], [ 6, 9 ], [ 7, 9 ], [ 8, 9 ] ] )
+%% #
+%% # so M2 is maximal in the intermediate subgroups 1, 2, 3, and 4.
+%% # Check whether one of these is not a subgroup of A or C:
+%% IsSubgroup(A,intM2B.subgroups[1]);   # returns true
+%% IsSubgroup(C,intM2B.subgroups[1]);   # returns true
+
+%% IsSubgroup(A,intM2B.subgroups[2]);   # returns true
+%% IsSubgroup(C,intM2B.subgroups[2]);   # returns false
+
+%% IsSubgroup(A,intM2B.subgroups[3]);   # returns true
+%% IsSubgroup(C,intM2B.subgroups[3]);   # returns false
+
+%% IsSubgroup(A,intM2B.subgroups[3]);   # returns true
+%% IsSubgroup(C,intM2B.subgroups[3]);   # returns false
+%% #
+%% # So, using this method and this group, the smallest set on 
+%% # which we can represent PJ11 is 108.
+
+
+%% \end{itemize}
+
+
 
 %/////////////////////////////////////////////////////////
 \section{Small unary algebras for congruence lattices of size $\le 7$}
 %%%% \input{inputs/conglattices7.tex}  (include all major inputs in one file)
 %% -- Begin conglattices7.tex file insertion -------------------------------
 
-%% \documentclass{amsart}
-%% \usepackage{tikz}
-%% \newcommand{\scs}{\scriptsize}
-%% \parindent0pt
-%% \advance\textheight by1in
-%% \advance\textwidth by1in
-%% \advance\topmargin by-.5in
-%% \advance\oddsidemargin by-.5in
-%% \advance\evensidemargin by-.5in
-
-%% \title{Small unary algebras for congruence lattices of size $\le 7$}
-%% \author{Peter Jipsen}
-%% \date{\today}
-%% \begin{document}
-%% \maketitle
 Distributive lattices and lattices that are ordinal sums of smaller lattices are omitted.
 The base set of each algebra is $\{0,1,\dots,n-1\}$, and each unary operation is
 specified by a vector of values of these elements.  Algebras of size less than
